# cpp_indie_studio

./: .gitattributes  .gitignore  CMakeLists.txt  Irrlicht.lib.REMOVED.git-id  README.md  bomberman-eo-studio-installer.exe.REMOVED.git-id  map.json  map2.json  map3.json  map4.json  map6.json
assets/: save.json
assets/Bomberman/: Block.x  Bomb.x  Bound.x  Brick.ms3d  Brick.x  Character.ms3d  Character.x  Flame.x  PowerUp.x  PowerUpBomb.ms3d  PowerUpBomb.x  PowerUpFlame.ms3d  PowerUpFlame.x  block.blend.ms3d  bomb.blend.ms3d  character.blend.x
assets/Bomberman/Bomberman (64 TSA)/: Bomberman (64 TSA).blend  Bomberman (64 TSA).mtl  Thumbs.db
assets/Bomberman/Bomberman (64 TSA)/Textures/: Thumbs.db
assets/maps/: map.json  map2.json  map3.json  map4.json  save.json
cmake/: FindIrrlicht.cmake  Makefile  cmake_install.cmake
inc/abstract/: ACollectible.hpp  AComputer.hpp  AMenu.hpp
inc/classes/: Core.hpp  Scene.hpp
inc/interface/: ICaracter.hpp  IMap.hpp  IObject.hpp  IScene.hpp
libs/irrlicht/lib/Win64-visualStudio/: Irrlicht.exp
src/: CEventReceiver.cpp  CEventReceiver.hpp  Types.hpp  main.cpp  receiver.cpp  receiver.hpp
src/abstract/: ABomb.cpp  ABomb.hpp  ACollectible.cpp  AComputer.cpp  AGame.cpp  AGame.hpp  AMenu.cpp  AMenu.hpp  AMonster.cpp  AMonster.hpp  AMovable.cpp  AMovable.hpp  AObject.cpp  AObject.hpp  AWall.cpp  AWall.hpp
src/abstracts/: ABomb.cpp  ABomb.hpp  ACharacter.cpp  ACharacter.hpp  ACollectible.hpp  AComputer.hpp  AGame.cpp  AGame.hpp  AMenu.cpp  AMenu.hpp  AModel.cpp  AModel.hpp  AMonster.hpp  AMovable.cpp  AMovable.hpp  AObject.cpp  AObject.hpp  APlayer.cpp  APlayer.hpp  AScene.cpp  AScene.hpp
src/classes/: Bomb.cpp  Bomb.hpp  Booster.cpp  Booster.hpp  Camera.cpp  Camera.hpp  Computer.cpp  Computer.hpp  Core.cpp  Core.hpp  Debug.cpp  Debug.hpp  Device.cpp  Device.hpp  Event.cpp  Event.hpp  EventGame.cpp  EventGame.hpp  Flame.cpp  Flame.hpp  Floor.cpp  Floor.hpp  Game.cpp  Game.hpp  JsonRead.cpp  JsonRead.hpp  JsonWrite.cpp  JsonWrite.hpp  Keymap.cpp  Keymap.hpp  Map.cpp  Map.hpp  MapWall.hpp  Options.cpp  Options.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  SceneHandler.cpp  (+5 more)
src/classes/menu/: CreditsMenu.cpp  CreditsMenu.hpp  EndGameMenu.cpp  EndGameMenu.hpp  GameMenu.cpp  GameMenu.hpp  MainMenu.cpp  MainMenu.hpp  MapMenu.cpp  MapMenu.hpp  PlayMenu.cpp  PlayMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp
src/interface/: ICharacter.hpp  IMap.hpp  INpc.hpp  IObject.hpp  IScene.hpp
src/interfaces/: ICharacter.hpp  IMap.hpp  IModel.hpp  IMovable.hpp  INpc.hpp  IObject.hpp  IScene.hpp
